update mm32 logo and index

--- a/dapjs/examples/daplink-flash/web.html
+++ b/dapjs/examples/daplink-flash/web.html
@@ -73,9 +73,61 @@
         </div>
     </div>
 
-    <a href="https://github.com/ARMmbed/dapjs/">
-        <svg id="github" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 16 16">
-            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+    <a href="https://www.mindmotion.com.cn/support/development_tools/evaluation_boards/">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="30px" viewBox="0 0 48 30" enable-background="new 0 0 48 30" xml:space="preserve">  <image id="image0" width="48" height="30" x="0" y="0"
+            href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAeCAYAAABqpJ3BAAALi0lEQVRYw72Ye5RV1X3HP799Hvcx
+        dx7MMAgDCAKCKGAQddVAUo0JAkGsaWzUaBSItqktvqKpsY0mxnaJEdOXCkoWkJrWtpBXXfJImhYT
+        FaMLhAoM79eMzJN53Ln3nnvO3r/+MYBRBptGkt9aZ519zjp77893n9/+/fbeAnDBLSswIlw4alCw
+        buvRe6PYfVJVrYKEvukYUp25t2SD5q2zH4NUdb3mDz+Mi88FHKeaiHglP1P9YPaZJXsHDdozqSL0
+        W/ORrdtxw/c7ho7q6Rj/+Oz8np5qMqFHbS4colBZiJKadOC1lWJ7Vl1VauvBlr4obiky5vzBw++Z
+        tq/zjotfzsj1CzuDKV14nlAqWvAE/yMLv4u1jhkT6rwXXjtyV08x+SvrNHuCJkrM0Yq0zS4ctwnJ
+        1Ne47t2PkfTdiqpwGlMxpYzK4iDXNMkm+myRZI+1LnXXK9PXNm3I7T/msmPqcnrAiPT1FuObPGMO
+        JFZnR9hDceIaevLxo7l0MCpzbmp7e290x4ptQ9ZuP/rRYPDv9XU6DUzK9w7GKZ0ObrvvnDLvkhHe
+        0+t3391TTL5unWbex+N649A9dMUvK3sPtS0h7psPyv9hDqMukGSUCDaxer5n5PUX9w2+yDeMVbVT
+        QJpBc6oMAo4YkTixOsUYaSzF9nMgI4uxfUtRb++xcHxjx9nVoKNFcLZsm1R1vEKDf8noGv/p9XsW
+        9RSTbwwAjypcPWp/beFwy19oXPh14AGIbaAFW3MwF/Y8DvieuHzaS3JGpABsU2h3zg0TpDrwvW2J
+        052ohk41r6qRKpNDz2wQ3MWeJ3lPOZRYphqh0xhTBF5X1X1Sd83Se7qL8Tes04pT4IHKlBzYOGvV
+        lnGpffOcYgakNeFh1FWiSU3/LDCRhNV/aTx/iyfOAGL89IFPfeesxo1bp0JFGvZ+nWVrXpfb/3GT
+        cqzAzN8f5a1ft8v+6a2Xmad+tM1hgI3N8InR0NqFbrsTmfI0mREViEJiLenAIBVznlpbKNurBuLy
+        jGm9eFjha+tmPPklXPnCAeG91P+QHXobcd8FRF1PoEn1cREx7/4uX/zMkrj54H1Lh23gq3f+jPpP
+        jbo59KTSM/LLstWhqoxNBWZtMbI3ZFPmF7HVHkHGZ0J/Z5S4MaEvdda63VZpEaTKqYuzoWnx9TQ+
+        4XvSXp0NF716/Yq1vUf0dh0Y/m0y9V8k37wpuK35tXjVREPU9S00qUJd8N7f6XxR+PmOdhZ89RLz
+        4httZ5etXiqOj6tqyTeyK+1LRSHiglLsxqoSIMRxKb4aiBInap1+TJBYcMYYSRfKbqN/GviOQRXh
+        nZXtP3ih1KM1CqdEHPHC7ZIZvHBfa7zpgeZ/YNWaeVR9YcdzxVUTDdGxxaitGsAjqQihrSdW35Pv
+        qvIvImJA+qzTrFN9J/TlQSMSGWOC0PeSKLZpz1DyjDGl2ErgGxd6xlnnAms1758GflHrmn//3qqn
+        GojpUozfhWoX4IwoZTLvNLsxd03+wYq3Lq19uSLwyvberbeWntC5Gn5hxzJdNRGiY4+jtvL97f/r
+        o0O56ZEuTZweMid1CU4Vp2CdNhrvxLOiqjgHRvrLquBUsa7fJ04RYER6KkK/MTvnD7hq6iv0ttbn
+        xZb/GJdkKsPIrtw7beyTWyfdveNY1UNp+TFb83iBMW/09lXed1P356MXOoYouZE7KXf3DSQg2V3g
+        +a9dO+B0auX/b6cIKCfunKPdpWeHVKUWhA9dtqX84Cs2Kia7l7x9EYt3zRlezLfdHsXJ5UJyso7z
+        SEqxM4+NfBitGD5dii1LcfHQ34DnwwsAKMV2aktPtHzYoPT88NGPbq3NXU5tLhwZF1qWlmM7e4AU
+        7HY1zbZj5i65zBXansNGE34X8ABGGDi2R7G9qK0n+s7w2sykwZWp4Yc7Cs8UIzt7oG+dCts+f90M
+        V2hbjo3OO11fqjBAPPhQ5ldmgu8FnvcmoAjOOje+L0o+q4opxXZaS3dppRHpKZaTywcKpYowsbZX
+        GmT/32KjiQP2Igb1Uke8HLgwfWYFHN3fsZLScX+uzTK4Pje7ENlrFTUApdhe9EENpAJ/w6JJ254J
+        KT470NIUEcXPPUvVmOckVUc4+hNnVkDx1ftPZrL6a5/BqZpft3Im9H6Wztbd9sVxr1b29AzgGiIQ
+        VC6nesL9lNq6cTFR9xGoHnHGBJhMypA9fgGgyInR/0D4wPuvYdXZ2xaNffFgbznlA9776MHPLafm
+        vC9Tau0mLpCavZr0GYSH90Wh0PcIfZNP+d5Opxqcpo4Entk1pCp9d0e+tPcrF75JrGEJL9yFszWc
+        yEx++qdUjn2AwtFubInMvDWEg8adUfhTBIw5K0fom1fzJXulfsCGJZf2+7Ye6uot/GI/ycKzEcwe
+        gqq5qDUnRl8rGrro3lMi7iOY/W+Eg87jt2HvEWBEMCKREWnRD4h2iXUUNr3DfY/MBHaASIJI67sR
+        WSDOg58lnLmSTP3k3wo8gKSvXnESShU8I4gIiXWIgO8ZrO1fl4gIuYxPvpigqiCG5KZbyff4gAPx
+        MBXDURejxVZQC2IQPwvqGPuTZRiB9p4I5xQjQuAbyok92XdsHaHvEScOBALPUFeVoq27hCpUZgLy
+        pRjnFM8IvogApAWZjBCKyHYREhGZBKiIbBPRIQIjRGhPBV5jXyk5D6hTpIk0B+llMspQoDHefWC/
+        VICpDscA40EO41fsIM47QRBBBCaKSJ0Ih42RJkGmIGREpFGQNhHqRPgIEIuwOZcO8u3dpckIgQhb
+        RRgpIlkR2e7HiUOECYnTNaA1IPNVqXOqS4Bmz8mcxOr9it4isL4rX77HWn1eVc8X4x5OOjiGsw/0
+        u2PS6TUENwJVaPwcSh2alLTU9ue45IeqFmuNb50+Yp1eY0T+Cey3E+fWoNSpyoIwMP9djt0KRS8F
+        KMfux82dha8kTpegDLFOr7RW73Cq56vKZ4x1inN6jkAGRFW5ROGPBFGgV4SSwngR6VV0uHXuRoQR
+        CJL24iZf6MZ4f4eY5SjjQc9F3WSQXRj/z4BBqJulBagJCigqChkRUPRip8wBahUygBcn7g+d6iwj
+        8tdG5ElFPx4nbiJKqJBVVVEIVUkDGLUO4FzgHYEDqtwIVAJtIAdVCUDrBV4HznaOGwS2oxSKNtz9
+        o6YL/hnVPtR9CeEImEZJD16Gl74dddMAC7JRMtAVv3tmYES2ALVO9RYR2QZE9K+XJhwv/zyb9p/w
+        PXNV4JvtHM8zIqL8yi7SsLkZVcYDjcB+pzrCCC8rGgrssk7rgVCE11SpAtqBw4r0zqjf0zVr2Nuf
+        QUwnYr6J0oDaWVruGo4tPQ5uAcZbjJdah4An7t1+YSfQ4pyOENh0HMohdAKBCMOKkZ1urd4XJ25k
+        /0BoWE5cDUqVgHqeqKmcMToLjBNhB9Aswk5BtqDUitCoqucAZUHeEqHPGNaoUodwdOqgps7Yyedw
+        yWJw1wGKSCcueQB1N6NU4Ox8bPTl3J8owzPHTgjwFDoF2SJC83ExAWA8Iz8U4ZB1+m3r3EqFaSK0
+        IWxWpaFUTlYreo0YefObt0wrSXbeykwU2+tFZLOqVgFVxshea/XTxsga0FpVJvqe+Wls3Rzfk/WJ
+        1SsE+uxL81fnl6Ua1CXXAQ0gb4if+Q9NileibtLxUfUR86brsC99bNdTtEQ1Xnt36bNAqwhFVUaL
+        yGbn9Gpj5KWkFL8dpINLrdO5CJFnZHUc251h4A2xTq9VZZwIe3zPrLZO2yU1dwVRbDEiKP1nFMYI
+        1irG9L9T7c8HiXUn7wCsW0B+aYDapB/VAH4GkuJ7zzoEkv1wRcvf01Sspb27dPK9an8CdU4RI9x8
+        5Vie/8+92LIFEfzQI+krE+RC4tiBdeAZwsCQOP3wu4vC96f3F9QhmXrwMmRmvvAbt7dyw25W/WQP
+        xghGwCls+JtZzHxgLbF1FKME3zMYI2z81qf5X6Js/TRA+bKWAAAAAElFTkSuQmCC" />
         </svg>
     </a>
 
