--- a/dapjs/examples/daplink-flash/web.html
+++ b/dapjs/examples/daplink-flash/web.html
@@ -24,7 +24,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>DAPjs Demo</title>
+    <title>MindMotion Mini-OB Series WebUSB Download</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
