--- a/dapjs/examples/daplink-flash/web.html
+++ b/dapjs/examples/daplink-flash/web.html
@@ -30,10 +30,10 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
 	<style>
         html { margin: 0; padding: 0; border: 0; }
-        body { font-family: 'Raleway', sans-serif; color: #d7ecfb; background-color: #072b44; text-align: center; }
+        body { font-family: 'Raleway', sans-serif; color: #d7ecfb; background-color: #c7faaf; text-align: center; }
         h1 { font-weight: 400; }
         strong { font-weight: 600; }
-        #drop { position: relative; margin: 20px auto; max-width: 500px; background-color: rgba(255, 255, 255, 0.10); padding: 100px 20px 80px 20px; outline: 2px dashed #072b44; outline-offset: -10px; }
+        #drop { position: relative; margin: 20px auto; max-width: 500px; background-color: rgba(255, 255, 255, 0.10); padding: 100px 20px 80px 20px; outline: 2px dashed #1a88c7; outline-offset: -10px; }
         #drop.hover { outline-offset: -10px; background-color: rgba(255, 255, 255, 0.15); }
         #icon { width: 100%; fill: #d7ecfb; margin-bottom: 30px; }
         #github { fill: #d7ecfb; }
