--- a/dapjs/examples/daplink-flash/web.html
+++ b/dapjs/examples/daplink-flash/web.html
@@ -24,23 +24,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MindMotion Mini-OB Series WebUSB Download</title>
+    <title>MindMotion WebUSB</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
 	<style>
         html { margin: 0; padding: 0; border: 0; }
-        body { font-family: 'Raleway', sans-serif; color: #d7ecfb; background-color: #c7faaf; text-align: center; }
+        body { font-family: 'Raleway', sans-serif; color: #d7ecfb; background-color: #072b44; text-align: center; }
         h1 { font-weight: 400; }
         strong { font-weight: 600; }
-        #drop { position: relative; margin: 20px auto; max-width: 500px; background-color: rgba(255, 255, 255, 0.10); padding: 100px 20px 80px 20px; outline: 2px dashed #1a88c7; outline-offset: -10px; }
+        #drop { position: relative; margin: 20px auto; max-width: 500px; background-color: rgba(255, 255, 255, 0.10); padding: 100px 20px 80px 20px; outline: 2px dashed #072b44; outline-offset: -10px; }
         #drop.hover { outline-offset: -10px; background-color: rgba(255, 255, 255, 0.15); }
         #icon { width: 100%; fill: #d7ecfb; margin-bottom: 30px; }
         #github { fill: #d7ecfb; }
         #github:hover { fill: #8bb5ba; }
         #file { width: 0.1px; height: 0.1px; opacity: 0; z-index: -1; }
         #label { cursor: pointer; }
-        #label:hover strong { color: #8bb5ba; }
+        #label:hover strong { color: #ef9749; }
         #select { position: absolute; left: 0; right: 0; visibility: hidden; }
         #button { font-size: 12px; color: inherit; margin: 20px auto; border: 0px; background-color: #1b679c; height: 30px; padding: 0 30px; border-radius: 4px; text-transform: uppercase; cursor: pointer; outline: none; }
         #button:hover { background: #2674ab; }
@@ -51,7 +51,7 @@
 </head>
 
 <body>
-    <h1>MindMotion Mini-OB Series WebUSB Download</h1>
+    <h1>Mini-OB Series Flash Download</h1>
     <div id="drop">
 		<svg id="icon" xmlns="http://www.w3.org/2000/svg" width="50" height="43" viewBox="0 0 50 43">
             <path d="M48.4 26.5c-.9 0-1.7.7-1.7 1.7v11.6h-43.3v-11.6c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v13.2c0 .9.7 1.7 1.7 1.7h46.7c.9 0 1.7-.7 1.7-1.7v-13.2c0-1-.7-1.7-1.7-1.7zm-24.5 6.1c.3.3.8.5 1.2.5.4 0 .9-.2 1.2-.5l10-11.6c.7-.7.7-1.7 0-2.4s-1.7-.7-2.4 0l-7.1 8.3v-25.3c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v25.3l-7.1-8.3c-.7-.7-1.7-.7-2.4 0s-.7 1.7 0 2.4l10 11.6z"/>
@@ -59,8 +59,8 @@
 
 		<input id="file" type="file" />
 		<label id="label" for="file">
-            <strong>Choose a firmware image</strong>
-            <span>or drag it here</span>
+            <strong>Choose a Firmware Image</strong>
+            <span>or Drag it here</span>
         </label>
 
         <div id="select">
