--- a/dapjs/examples/daplink-flash/web.html
+++ b/dapjs/examples/daplink-flash/web.html
@@ -28,6 +28,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
+    <link rel="icon" href="../../pic/m.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../pic/m.ico" type="image/x-icon">
 	<style>
         html { margin: 0; padding: 0; border: 0; }
         body { font-family: 'Raleway', sans-serif; color: #d7ecfb; background-color: #072b44; text-align: center; }
