--- a/webusb/examples/read-registers/web.html
+++ b/webusb/examples/read-registers/web.html
@@ -23,7 +23,7 @@
 <body>
     <button id="read">Read Registers</button>
 
-    <script type="text/javascript" src="../../node_modules/dapjs/dist/dap.umd.js"></script>
+    <script type="text/javascript" src="../../dist/dap.umd.js"></script>
     <script>
         const count = 16;
 
