--- a/webusb/examples/rtt/web.html
+++ b/webusb/examples/rtt/web.html
@@ -25,7 +25,7 @@ SOFTWARE.
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="../../node_modules/dapjs/dist/dap.umd.js"></script>
+        <script type="text/javascript" src="../../dist/dap.umd.js"></script>
         <script src="rtt.js"></script>
         <link rel="stylesheet" href="xterm.css" />
         <script src="xterm.js"></script>
