--- a/webusb/examples/daplink-serial/web.html
+++ b/webusb/examples/daplink-serial/web.html
@@ -24,7 +24,7 @@
     <button id="connect">Connect</button>
     <div id="results" style="white-space: pre;" />
 
-    <script type="text/javascript" src="../../node_modules/dapjs/dist/dap.umd.js"></script>
+    <script type="text/javascript" src="../../dist/dap.umd.js"></script>
     <script>
 
         // Listen to serial output from the device
