--- a/webusb/examples/index.html
+++ b/webusb/examples/index.html
@@ -24,13 +24,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>DAPjs Demos</title>
+    <title>MindMotion Mini-Board</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
+    <link rel="icon" href="../pic/m.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../pic/m.ico" type="image/x-icon">
 	<style>
         html { margin: 0; padding: 0; border: 0; }
-        body { font-family: 'Raleway', sans-serif; color: #aaa; text-align: center; }
+        body { font-family: 'Raleway', sans-serif; color: #131111; text-align: center; }
         h1 { font-weight: 400; }
         strong { font-weight: 600; }
         ul { list-style-type: none; padding: 0; }
@@ -40,18 +42,18 @@
 </head>
 
 <body>
-    <h1>DAPjs Demos</h1>
+    <h1>MM32-Board Eco-System</h1>
 
     <ul>
-        <li><a href="daplink-flash/web.html">DAPLink Flash</a></li>
+        <li><a href="daplink-flash/web.html">Flash Program</a></li>
         <li><a href="read-registers/web.html">Read Registers</a></li>
-        <li><a href="daplink-serial/web.html">DAPLink Serial</a></li>
+        <li><a href="daplink-serial/web.html">Serial Port</a></li>
         <li><a href="execute/web.html">Execute</a></li>
         <li><a href="rtt/web.html">RTT Terminal</a></li>
     </ul>
 
     <a href="https://www.mindmotion.com.cn/support/development_tools/evaluation_boards/">
-        <embed src="../../pic/logo.svg" width="300" height="100" type="image/svg+xml" pluginspage="http://www.adobe.com/svg/viewer/install/" />
+        <embed src="../pic/logo.svg" width="300" height="100" type="image/svg+xml" pluginspage="http://www.adobe.com/svg/viewer/install/" />
     </a>
 </body>
 </html>
