--- a/webusb/examples/index.html
+++ b/webusb/examples/index.html
@@ -28,8 +28,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
-    <link rel="icon" href="../pic/m.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../pic/m.ico" type="image/x-icon">
+    <link rel="icon" href="/pic/m.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="pic/m.ico" type="image/x-icon">
 	<style>
         html { margin: 0; padding: 0; border: 0; }
         body { font-family: 'Raleway', sans-serif; color: #131111; text-align: center; }
@@ -53,7 +53,7 @@
     </ul>
 
     <a href="https://www.mindmotion.com.cn/support/development_tools/evaluation_boards/">
-        <embed src="../pic/logo.svg" width="300" height="100" type="image/svg+xml" pluginspage="http://www.adobe.com/svg/viewer/install/" />
+        <embed src="pic/logo.svg" width="300" height="100" type="image/svg+xml" pluginspage="http://www.adobe.com/svg/viewer/install/" />
     </a>
 </body>
 </html>
