--- a/webusb/examples/daplink-flash/web.html
+++ b/webusb/examples/daplink-flash/web.html
@@ -24,7 +24,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MindMotion WebUSB</title>
+    <title>MM32-Board Operate</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <a href="https://www.mindmotion.com.cn/support/development_tools/evaluation_boards/">
+    <a href="https://chendudo.github.io/webusb/examples/index.html">
         <embed src="../../pic/logo.svg" width="300" height="100" type="image/svg+xml" pluginspage="http://www.adobe.com/svg/viewer/install/" />
     </a>
 
