--- a/webusb/examples/daplink-flash/web.html
+++ b/webusb/examples/daplink-flash/web.html
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <a href="https://chendudo.github.io/webusb/examples/index.html">
+    <a href="../index.html">
         <embed src="../../pic/logo.svg" width="300" height="100" type="image/svg+xml" pluginspage="http://www.adobe.com/svg/viewer/install/" />
     </a>
 
