--- a/webusb/examples/index.html
+++ b/webusb/examples/index.html
@@ -32,17 +32,17 @@
     <link rel="shortcut icon" href="../pic/m.ico" type="image/x-icon">
 	<style>
         html { margin: 0; padding: 0; border: 0; }
-        body { font-family: 'Raleway', sans-serif; color: #131111; text-align: center; }
+        body { font-family: 'Raleway', sans-serif; color: #164cdf; text-align: center; }
         h1 { font-weight: 400; }
         strong { font-weight: 600; }
         ul { list-style-type: none; padding: 0; }
-        #github { fill: #aaa; }
+        #github { fill: #aaaaaa; }
         #github:hover { fill: #8bb5ba; }
 	</style>
 </head>
 
 <body>
-    <h1>MM32-Board Eco-System</h1>
+    <h1>MindMotion MiniBoard Firmware Develop</h1>
 
     <ul>
         <li><a href="daplink-flash/web.html">Flash Program</a></li>
@@ -53,9 +53,9 @@
     </ul>
 
     <div>
-    <a href="https://www.mindmotion.com.cn/support/development_tools/evaluation_boards/">
+    <!-- <a href="https://www.mindmotion.com.cn/support/development_tools/evaluation_boards/">
         <embed src="../pic/logo.svg" width="300" height="100" type="image/svg+xml" pluginspage="http://www.adobe.com/svg/viewer/install/" />
-    </a>
+    </a> -->
     </div>
     <div>
     <a href="https://github.com/ARMmbed/dapjs/">
