--- a/webusb/examples/index.html
+++ b/webusb/examples/index.html
@@ -101,7 +101,7 @@
     </div>
 
     <footer>
-    <p font-family: microsoft sans serif>Designed by <a  font-size=12px href="https://chendudo.github.io/">BD4SXU</a>.</p>
+    <p font-family: microsoft sans serif>Designed by BD4SXU.</p>
     </footer>
 
 </body>
