update mm32 trademark

--- a/webusb/examples/index.html
+++ b/webusb/examples/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-    <h1>MM32&reg; Mini-Board Firmware Develop</h1>
+    <h1>MM32<sup>&reg;</sup> Mini-Board Firmware Develop</h1>
 
     <!-- <ul>
         <li><a href="daplink-flash/web.html">Flash Program</a></li>
