--- a/webusb/examples/firmware/web.html
+++ b/webusb/examples/firmware/web.html
@@ -208,7 +208,7 @@
       alert("此功能开发中！\n您还可以通过下载“出厂固件”，拖拽至 Flash 编程区域即可恢复出厂...");
 
       const xhr = new XMLHttpRequest();
-      var url = "https://chendo.gitee.io/webusb/examples/firmware/src/G0001/firmware.hex";
+      var url = "https://chendudo.github.io/webusb/examples/firmware/src/G0001/firmware.hex";
       // var url = "./src/G0001/firmware.hex";
       // var url = "C:\\Users\\chendo\\Documents\\_0_MindMotion\\chendo\\webusb\\examples\\firmware\\src\\G0001\\firmware.hex";
       xhr.withCredentials = true;
@@ -234,7 +234,7 @@
       xhr.send();
 
       setStatus("Get Remote Data ..."); 
-      
+
       xhr.onreadystatechange = function () {
         console.log("xhr.readyState=" + xhr.readyState);
         console.log("xhr.status=" + xhr.status);
